--- a/Python_DataStructures.ipynb
+++ b/Python_DataStructures.ipynb
@@ -115,7 +115,8 @@
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "#Data structures are lists, tuples, dictionaries, and sets that organize and store data in the respective format"
    ]
   },
   {
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "52f133eb",
    "metadata": {
     "deletable": false,
@@ -163,11 +164,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"I'm first\", 7, 9.9, True, [1, 2, 3]]\n",
+      "7\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "new_list = [\"I'm first\", 7, 9.9, True, [1,2,3]]\n",
+    "print(new_list)\n",
+    "print(new_list[1])\n",
+    "print(new_list[4][1])"
    ]
   },
   {
@@ -200,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0efd19d5",
    "metadata": {
     "deletable": false,
@@ -216,11 +231,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"I'm first\", 7, 9.9, True, [1, 2, 3]]\n",
+      "[\"I'm second\", 8, 1.1, [4, 5, 6]]\n",
+      "[\"I'm first\", 7, 9.9, True, [1, 2, 3], \"I'm second\", 8, 1.1, [4, 5, 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "second_list = [\"I'm second\", 8, 1.1, [4, 5,6]]\n",
+    "print(new_list)\n",
+    "print(second_list)\n",
+    "merged_list = new_list + second_list\n",
+    "print(merged_list)"
    ]
   },
   {
@@ -251,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8a1ace45",
    "metadata": {
     "deletable": false,
@@ -267,11 +297,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['first', \"I'm first\", 7, 9.9, True, [1, 2, 3], \"I'm second\", 8, 1.1, [4, 5, 6], \"I'm first\", 7, 9.9, True, [1, 2, 3], 5]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "merged_list.extend(new_list)\n",
+    "merged_list.append(5)\n",
+    "merged_list.insert(0,\"first\")\n",
+    "print(merged_list)"
    ]
   },
   {
@@ -303,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6ea50639",
    "metadata": {
     "deletable": false,
@@ -319,11 +361,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"I'm first\", 7, 9.9, True, [1, 2, 3], \"I'm second\", 8, 1.1, [4, 5, 6], \"I'm first\", 7, 9.9, True, [1, 2, 3]]\n",
+      "2\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "merged_list.pop()\n",
+    "merged_list.remove(\"first\")\n",
+    "print(merged_list)\n",
+    "print(merged_list.index(9.9))\n",
+    "print(\"first\" not in merged_list)\n"
    ]
   },
   {
@@ -351,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1ecdaecd",
    "metadata": {
     "deletable": false,
@@ -367,12 +424,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10, 20, 30, 40, 50.4, 100]\n"
+     ]
+    }
+   ],
    "source": [
     "num_list = [20, 40, 10, 50.4, 30, 100, 5]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "num_list.sort()\n",
+    "print(num_list)\n"
    ]
   },
   {
@@ -402,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "933c83f5",
    "metadata": {
     "deletable": false,
@@ -418,12 +485,33 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 50]\n",
+      "[20, 40, 60, 80, 100]\n",
+      "[40, 80]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [10, 20, 30, 40, 50]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "#sum_list = [(n1, n2) for n1 in list1 for n2 in list2 if n1 + n2 > 100]\n",
+    "nums_double = []\n",
+    "\n",
+    "for n in nums:\n",
+    "    nums_double.append(n*2)\n",
+    "\n",
+    "nums_double_cond = [n*2 for n in nums if n%4==0]\n",
+    "\n",
+    "print(nums)\n",
+    "print(nums_double)\n",
+    "print(nums_double_cond)"
    ]
   },
   {
@@ -452,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d1d96c96",
    "metadata": {
     "deletable": false,
@@ -468,11 +556,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "cities = (\"London\", \"Paris\", \"Los Angeles\", \"Tokyo\")\n",
+    "print(cities.index(\"Tokyo\"))"
    ]
   },
   {
@@ -520,7 +618,8 @@
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "#lists are mutable, but tuples are not"
    ]
   },
   {
@@ -551,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d0daad85",
    "metadata": {
     "deletable": false,
@@ -567,11 +666,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{'Batman': 468426, 'Cersei': 237734, 'Ghostbusters': 44678}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "emtpy_dict = {}\n",
+    "print(emtpy_dict)\n",
+    "phone_book = {\"Batman\":468426, \"Cersei\":237734, \"Ghostbusters\":44678}\n",
+    "print(phone_book)\n",
+    "\n"
    ]
   },
   {
@@ -603,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "bd7c39e8",
    "metadata": {
     "deletable": false,
@@ -619,11 +732,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{'Batman': 468426, 'Cersei': 237734, 'Ghostbusters': 44678}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "empty_dict = dict()\n",
+    "print(empty_dict)\n",
+    "phone_book = dict([(\"Batman\", 468426), (\"Cersei\", 237734), (\"Ghostbusters\", 44678)])\n",
+    "print(phone_book)"
    ]
   },
   {
@@ -652,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c7091716",
    "metadata": {
     "deletable": false,
@@ -668,11 +794,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "237734\n",
+      "44678\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(phone_book[\"Cersei\"])\n",
+    "print(phone_book.get(\"Ghostbusters\"))\n"
    ]
   },
   {
@@ -707,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "40a60788",
    "metadata": {
     "deletable": false,
@@ -723,12 +860,31 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Batman': 468426, 'Cersei': 237734, 'Ghostbusters': 44678, 'Godzilla': 46394}\n",
+      "{'Batman': 468426, 'Cersei': 237734, 'Ghostbusters': 44678, 'Godzilla': 9000}\n",
+      "{'Cersei': 237734, 'Ghostbusters': 44678, 'Godzilla': 9000}\n",
+      "{'Cersei': 237734, 'Ghostbusters': 44678, 'Godzilla': 37623, 'Catwoman': 67423, 'Jaime': 237734}\n"
+     ]
+    }
+   ],
    "source": [
     "second_phone_book = {\"Catwoman\": 67423, \"Jaime\": 237734, \"Godzilla\": 37623}\n",
-    "\n",
+    "phone_book = {\"Batman\": 468426, \"Cersei\": 237734, \"Ghostbusters\": 44678}\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "phone_book[\"Godzilla\"] = 46394\n",
+    "print(phone_book)\n",
+    "phone_book[\"Godzilla\"] = 9000\n",
+    "print(phone_book)\n",
+    "del phone_book[\"Batman\"]\n",
+    "print(phone_book)\n",
+    "phone_book.update(second_phone_book)\n",
+    "print(phone_book)"
    ]
   },
   {
@@ -763,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "69021f25",
    "metadata": {
     "deletable": false,
@@ -779,11 +935,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1408, (True, False), 3.142, 'Educative'}\n",
+      "set()\n",
+      "{1}\n",
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "random_set = {\"Educative\", 1408, 3.142, (True, False)}\n",
+    "print(random_set)\n",
+    "empty_set = set()\n",
+    "print(empty_set)\n",
+    "empty_set.add(1)\n",
+    "print(empty_set)\n",
+    "empty_set.update([2,3,4,5,6])\n",
+    "print(empty_set)"
    ]
   },
   {
@@ -811,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "573001eb",
    "metadata": {
     "deletable": false,
@@ -827,13 +1002,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 'b', 'a', 'd', 'c'}\n"
+     ]
+    }
+   ],
    "source": [
     "set_A = {1, 2, 3, 4}\n",
     "set_B = {'a', 'b', 'c', 'd'}\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(set_A.union(set_B))"
    ]
   },
   {
@@ -861,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "09a4cdf7",
    "metadata": {
     "deletable": false,
@@ -877,13 +1061,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4}\n"
+     ]
+    }
+   ],
    "source": [
     "set_A = {1, 2, 3, 4}\n",
-    "set_B = {'a', 'b', 'c', 'd'}\n",
+    "set_B = {2,8,4,16}\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(set_A.intersection(set_B))"
    ]
   },
   {
@@ -912,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "23861748",
    "metadata": {
     "deletable": false,
@@ -928,13 +1121,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3}\n",
+      "{8, 16}\n"
+     ]
+    }
+   ],
    "source": [
     "set_A = {1, 2, 3, 4}\n",
     "set_B = {2, 8, 4, 16}\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(set_A.difference(set_B))\n",
+    "print(set_B.difference(set_A))"
    ]
   },
   {
@@ -962,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "bf1a4dc3",
    "metadata": {
     "deletable": false,
@@ -978,7 +1182,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Anakin', 'Darth Vader', 1000)\n",
+      "{1000, 'Darth Vader', 'Anakin'}\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "['Anakin', 'Darth Vader', 1000]\n",
+      "[1000, 'Darth Vader', 'Anakin']\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "star_wars_tup = (\"Anakin\", \"Darth Vader\", 1000)\n",
     "print(star_wars_tup)\n",
@@ -988,7 +1205,10 @@
     "print(star_wars_dict)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "print(list(star_wars_tup))\n",
+    "print(list(star_wars_set))\n",
+    "print(list(star_wars_dict))\n"
    ]
   },
   {
@@ -1016,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "311be910",
    "metadata": {
     "deletable": false,
@@ -1032,7 +1252,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Anakin', 'Darth Vader', 1000]\n",
+      "{1000, 'Darth Vader', 'Anakin'}\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "('Anakin', 'Darth Vader', 1000)\n",
+      "(1000, 'Darth Vader', 'Anakin')\n",
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "star_wars_list = [\"Anakin\", \"Darth Vader\", 1000]\n",
     "print(star_wars_list)\n",
@@ -1042,7 +1275,10 @@
     "print(star_wars_dict)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "print(tuple(star_wars_list))\n",
+    "print(tuple(star_wars_set))\n",
+    "print(tuple(star_wars_dict))"
    ]
   },
   {
@@ -1070,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "e1beeefb",
    "metadata": {
     "deletable": false,
@@ -1086,7 +1322,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Anakin', 'Darth Vader', 1000]\n",
+      "('Anakin', 'Darth Vader', 1000)\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "{1000, 'Darth Vader', 'Anakin'}\n",
+      "{1000, 'Darth Vader', 'Anakin'}\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
    "source": [
     "star_wars_list = [\"Anakin\", \"Darth Vader\", 1000]\n",
     "print(star_wars_list)\n",
@@ -1096,7 +1345,10 @@
     "print(star_wars_dict)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(set(star_wars_list))\n",
+    "print(set(star_wars_tup))\n",
+    "print(set(star_wars_dict))"
    ]
   },
   {
@@ -1124,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "7570d1c3",
    "metadata": {
     "deletable": false,
@@ -1140,7 +1392,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 'Anakin'], [2, 'Darth Vader'], [3, 1000]]\n",
+      "((1, 'Anakin'), (2, 'Darth Vader'), (3, 1000))\n",
+      "{(3, 1000), (2, 'Darth Vader'), (1, 'Anakin')}\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "{1: 'Anakin', 2: 'Darth Vader', 3: 1000}\n",
+      "{3: 1000, 2: 'Darth Vader', 1: 'Anakin'}\n"
+     ]
+    }
+   ],
    "source": [
     "star_wars_list = [[1,\"Anakin\"], [2,\"Darth Vader\"], [3, 1000]]\n",
     "print (star_wars_list)\n",
@@ -1150,13 +1415,16 @@
     "print (star_wars_set)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#raise NotImplementedError()\n",
+    "print(dict(star_wars_list))\n",
+    "print(dict(star_wars_tup))\n",
+    "print(dict(star_wars_set))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1170,7 +1438,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ef85dec995d554d507a1d56daa07ca81c920f134ad660a0fcb3676a56222efcf"
+   }
   }
  },
  "nbformat": 4,
